# Flickr2Any-Tool

./: .gitignore  pyproject.toml  requirements.txt  setup.py
flickr_to_anytool/: __init__.py  cli.py  constants.py  exif_writer.py  exporter.py  flickr_api_metadata.py  flickr_export_metadata.py  flickr_export_multipart_metadata_cache.py  flickr_to_any.py  interesting_album_creator.py  interestingness_filter.py  jpeg_verifier.py  output_helpers.py  preprocessor.py  process_single_photo.py  user_mapping.py
tests/: __init__.py  test_exif_writer.py  test_exporter.py  test_flickr_export_multipart_metadata_cache.py  test_flickr_export_multipart_metadata_cache_multipart.py
tests/fixtures/album_metadata/: albums.json
tests/fixtures/album_metadata_multipart/: albums_part1.json  albums_part2.json
tests/fixtures/metadata/: photo_123456789.json  photo_144332211.json  photo_987654321.json
